if (NOT WITH_RUNTIME_LIBRARY)
  add_subdirectory(libasr)
  add_subdirectory(tests)
  add_subdirectory(lfortran)
  add_subdirectory(bin)
  add_subdirectory(runtime/legacy)
elseif(WITH_RUNTIME_LIBRARY_ONLY)
  add_subdirectory(runtime)
  add_subdirectory(runtime/legacy)
else()
  add_subdirectory(libasr)
  add_subdirectory(tests)
  add_subdirectory(lfortran)
  add_subdirectory(bin)
  add_subdirectory(runtime)
  add_subdirectory(runtime/legacy)
endif()
